--- a/MemberListView/MemberListView.nuspec
+++ b/MemberListView/MemberListView.nuspec
@@ -12,12 +12,15 @@
           ]]>
     </description>
     <summary>Adds a MemberListView dashboard to the Members area in Umbraco 7.7 +</summary>
-    <copyright>Copyright 2018 Robert Foster</copyright>
+    <copyright>Copyright 2020 Robert Foster</copyright>
     <projectUrl>https://github.com/KOBENDigital/umbMemberListView</projectUrl>
     <language />
     <releaseNotes>
       <![CDATA[
 Installing the package enables a new Manage Dashboard on the Members section.
+
+**Version 1.4.0**
+* Support for Umbraco 7.15
 
 **Version 1.3.0**
 * Support for Localization with plugin-based lang files
@@ -48,11 +51,15 @@ Installing the package enables a new Manage Dashboard on the Members section.
 * Export - Filtered members can now be exported to a CSV file containing basic fields. 
       ]]>
     </releaseNotes>
-    <iconUrl>https://koben.blob.core.windows.net/assets/Koben_32.png</iconUrl>
+    <iconUrl>https://youritteam.blob.core.windows.net/assets/youritteam_64.png</iconUrl>
+    <icon>images\icon.png</icon>
     
     <tags>Umbraco Membership Member Management</tags>
     <dependencies>
       <dependency id="UmbracoCMS" version="[7.7.0, )"></dependency>
     </dependencies>
   </metadata>
+  <files>
+    <file src=".\icon.png" target="images"/>
+  </files>
 </package>
