--- a/MemberListView/packages.config
+++ b/MemberListView/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
+  <package id="AutoMapper" version="3.3.1" targetFramework="net47" />
   <package id="ClientDependency" version="1.9.7" targetFramework="net47" />
-  <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net45" />
+  <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net47" />
   <package id="Examine" version="0.1.90" targetFramework="net47" />
   <package id="HtmlAgilityPack" version="1.8.8" targetFramework="net47" />
   <package id="ImageProcessor" version="2.7.0.100" targetFramework="net47" />
   <package id="ImageProcessor.Web" version="4.10.0.100" targetFramework="net47" />
-  <package id="log4net" version="2.0.8" targetFramework="net45" />
-  <package id="Log4Net.Async" version="2.0.4" targetFramework="net45" />
-  <package id="Lucene.Net" version="2.9.4.1" targetFramework="net45" />
-  <package id="Markdown" version="1.14.7" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net47" />
+  <package id="Log4Net.Async" version="2.0.4" targetFramework="net47" />
+  <package id="Lucene.Net" version="2.9.4.1" targetFramework="net47" />
+  <package id="Markdown" version="1.14.7" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net47" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net47" />
@@ -28,14 +28,13 @@
   <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net47" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="MiniProfiler" version="2.1.0" targetFramework="net45" />
-  <package id="MySql.Data" version="6.9.11" targetFramework="net45" />
+  <package id="MiniProfiler" version="2.1.0" targetFramework="net47" />
+  <package id="MySql.Data" version="6.9.12" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net47" />
-  <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="semver" version="1.1.2" targetFramework="net45" requireReinstallation="true" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net47" />
+  <package id="semver" version="1.1.2" targetFramework="net47" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net47" />
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net47" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
   <package id="UmbracoCms.Core" version="7.15.1" targetFramework="net47" />
-  <package id="xmlrpcnet" version="2.5.0" targetFramework="net45" />
 </packages>
