Fix for editing members not working

--- a/MemberListView/MemberListView.nuspec
+++ b/MemberListView/MemberListView.nuspec
@@ -19,6 +19,9 @@
       <![CDATA[
 Installing the package enables a new Manage Dashboard on the Members section.
 
+**Version 1.4.2**
+* Fix for editing members not working
+
 **Version 1.4.1**
 * Fix for downloading Member export CSV when security headers are set resulting in 417 error.
 
