--- a/MemberListView/MemberListView.nuspec
+++ b/MemberListView/MemberListView.nuspec
@@ -8,10 +8,10 @@
     <owners>Robert Foster</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>
-      <![CDATA[Adds a MemberListView dashboard to the Members area in Umbraco 7.7+ to allow easier management of members including approval and unlocking capabilities.
+      <![CDATA[Adds a MemberListView dashboard to the Members area in Umbraco 7.15 + to allow easier management of members including approval and unlocking capabilities.
           ]]>
     </description>
-    <summary>Adds a MemberListView dashboard to the Members area in Umbraco 7.7 +</summary>
+    <summary>Adds a MemberListView dashboard to the Members area in Umbraco 7.15 +</summary>
     <copyright>Copyright 2020 Robert Foster</copyright>
     <projectUrl>https://github.com/KOBENDigital/umbMemberListView</projectUrl>
     <language />
@@ -19,14 +19,12 @@
       <![CDATA[
 Installing the package enables a new Manage Dashboard on the Members section.
 
-**Version 1.4.2**
-* Fix for editing members not working
+**Version 1.5.0**
 
-**Version 1.4.1**
-* Fix for downloading Member export CSV when security headers are set resulting in 417 error.
-
-**Version 1.4.0**
 * Support for Umbraco 7.15
+* Refreshed listview to be more inline with current Umbraco styling and practices.
+* Filtering and columns now much easier to customise.
+* Added multiple Member Group filtering out of the box
 
 **Version 1.3.0**
 * Support for Localization with plugin-based lang files
