--- a/MemberListView/MemberListView.csproj
+++ b/MemberListView/MemberListView.csproj
@@ -59,14 +59,26 @@
     <Reference Include="ClientDependency.Core.Mvc, Version=1.8.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ClientDependency-Mvc5.1.8.0.0\lib\net45\ClientDependency.Core.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="ClosedXML, Version=0.94.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ClosedXML.0.94.2\lib\net46\ClosedXML.dll</HintPath>
+    </Reference>
     <Reference Include="cms, Version=1.0.7144.21661, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\UmbracoCms.Core.7.15.1\lib\net452\cms.dll</HintPath>
     </Reference>
     <Reference Include="controls, Version=1.0.7144.21662, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\UmbracoCms.Core.7.15.1\lib\net452\controls.dll</HintPath>
     </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.10.0.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.10.0\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
+    </Reference>
     <Reference Include="Examine, Version=0.1.90.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Examine.0.1.90\lib\net45\Examine.dll</HintPath>
+    </Reference>
+    <Reference Include="ExcelNumberFormat, Version=1.0.3.0, Culture=neutral, PublicKeyToken=23c6f5d73be07eca, processorArchitecture=MSIL">
+      <HintPath>..\packages\ExcelNumberFormat.1.0.3\lib\net20\ExcelNumberFormat.dll</HintPath>
+    </Reference>
+    <Reference Include="FastMember, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FastMember.1.3.0\lib\net45\FastMember.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.8.8.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.8.8\lib\Net45\HtmlAgilityPack.dll</HintPath>
@@ -159,6 +171,14 @@
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.IO.FileSystem.Primitives, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IO.FileSystem.Primitives.4.3.0\lib\net46\System.IO.FileSystem.Primitives.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.IO.Packaging, Version=4.0.5.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IO.Packaging.4.7.0\lib\net46\System.IO.Packaging.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
@@ -236,18 +256,20 @@
     <Reference Include="UmbracoExamine, Version=0.7.0.21662, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\UmbracoCms.Core.7.15.1\lib\net452\UmbracoExamine.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
-  <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="Controllers\MemberApiController.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="EventHandlers\MembershipIndexEventHandler.cs" />
-    <Compile Include="Helpers\CSVExport.cs" />
+    <Compile Include="Extensions\ExportExtension.cs" />
     <Compile Include="Helpers\MemberSearch.cs" />
+    <Compile Include="Models\ExportFormat.cs" />
     <Compile Include="Models\Mapping\MemberItemMapper.cs" />
+    <Compile Include="Models\MemberColumn.cs" />
     <Compile Include="Models\MemberExportModel.cs" />
     <Compile Include="Models\MemberListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -257,11 +279,14 @@
   <ItemGroup>
     <Content Include="App_Plugins\MemberManager\backoffice\dashboard\memberListView.controller.js" />
     <Content Include="App_Plugins\MemberManager\backoffice\dashboard\memberListView.html" />
+    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\edit.controller.js" />
+    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\export.controller.js" />
+    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\export.html" />
+    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\filter.controller.js" />
     <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\filter.html" />
     <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\edit.html" />
-    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\member.edit.controller.js" />
-    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\member.filter.controller.js" />
     <Content Include="App_Plugins\MemberManager\css\memberListView.css" />
+    <Content Include="App_Plugins\MemberManager\css\memberListView.min.css" />
     <Content Include="App_Plugins\MemberManager\lang\cs.xml" />
     <Content Include="App_Plugins\MemberManager\lang\da.xml" />
     <Content Include="App_Plugins\MemberManager\lang\de.xml" />
@@ -283,18 +308,9 @@
     <Content Include="App_Plugins\MemberManager\lang\zh-tw.xml" />
     <Content Include="App_Plugins\MemberManager\lang\zh.xml" />
     <Content Include="App_Plugins\MemberManager\resources\member.resource.js" />
-    <Content Include="Web.config" />
-    <Content Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
-    <Content Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
+    <Content Include="icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="config\ExamineIndex.config.transform">
-      <SubType>Designer</SubType>
-    </Content>
     <Content Include="config\Dashboard.config.transform" />
     <Content Include="MemberListView.nuspec">
       <SubType>Designer</SubType>
