--- a/MemberListView/packages.config
+++ b/MemberListView/packages.config
@@ -3,7 +3,11 @@
   <package id="AutoMapper" version="3.3.1" targetFramework="net47" />
   <package id="ClientDependency" version="1.9.7" targetFramework="net47" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net47" />
+  <package id="ClosedXML" version="0.94.2" targetFramework="net47" />
+  <package id="DocumentFormat.OpenXml" version="2.10.0" targetFramework="net47" />
   <package id="Examine" version="0.1.90" targetFramework="net47" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net47" />
+  <package id="FastMember" version="1.3.0" targetFramework="net47" />
   <package id="HtmlAgilityPack" version="1.8.8" targetFramework="net47" />
   <package id="ImageProcessor" version="2.7.0.100" targetFramework="net47" />
   <package id="ImageProcessor.Web" version="4.10.0.100" targetFramework="net47" />
@@ -34,6 +38,8 @@
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="semver" version="1.1.2" targetFramework="net47" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net47" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO.Packaging" version="4.7.0" targetFramework="net47" />
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net47" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
   <package id="UmbracoCms.Core" version="7.15.1" targetFramework="net47" />
