--- a/WebSample/WebSample.csproj
+++ b/WebSample/WebSample.csproj
@@ -255,11 +255,14 @@
   <ItemGroup>
     <Content Include="App_Plugins\MemberManager\backoffice\dashboard\memberListView.controller.js" />
     <Content Include="App_Plugins\MemberManager\backoffice\dashboard\memberListView.html" />
+    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\edit.controller.js" />
     <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\edit.html" />
+    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\export.controller.js" />
+    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\export.html" />
+    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\filter.controller.js" />
     <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\filter.html" />
-    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\member.edit.controller.js" />
-    <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\member.filter.controller.js" />
     <Content Include="App_Plugins\MemberManager\css\memberListView.css" />
+    <Content Include="App_Plugins\MemberManager\css\memberListView.min.css" />
     <Content Include="App_Plugins\MemberManager\lang\cs.xml" />
     <Content Include="App_Plugins\MemberManager\lang\da.xml" />
     <Content Include="App_Plugins\MemberManager\lang\de.xml" />
@@ -278,8 +281,8 @@
     <Content Include="App_Plugins\MemberManager\lang\ru.xml" />
     <Content Include="App_Plugins\MemberManager\lang\sv.xml" />
     <Content Include="App_Plugins\MemberManager\lang\tr.xml" />
-    <Content Include="App_Plugins\MemberManager\lang\zh.xml" />
     <Content Include="App_Plugins\MemberManager\lang\zh-tw.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\zh.xml" />
     <Content Include="App_Plugins\MemberManager\resources\member.resource.js" />
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.controller.js" />
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.htm" />
@@ -317,7 +320,6 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="config\ClientDependency.config" />
-    <Content Include="App_Plugins\MemberManager\package.manifest" />
     <Content Include="Views\Partials\Grid\Editors\Textstring.cshtml" />
     <Content Include="Views\Partials\Grid\Editors\Rte.cshtml" />
     <Content Include="Views\Partials\Grid\Editors\Media.cshtml" />
@@ -344,6 +346,7 @@
     <Content Include="config\BackOfficeTours\getting-started.json" />
     <Content Include="config\applications.config" />
     <Content Include="config\404handlers.config" />
+    <Content Include="App_Plugins\MemberManager\package.manifest" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
