--- a/MemberListView/MemberListView.nuspec
+++ b/MemberListView/MemberListView.nuspec
@@ -13,7 +13,7 @@
     </description>
     <summary>Adds a MemberListView dashboard to the Members area in Umbraco 7.15 +</summary>
     <copyright>Copyright 2020 Robert Foster</copyright>
-    <projectUrl>https://github.com/KOBENDigital/umbMemberListView</projectUrl>
+    <projectUrl>https://github.com/YourItGroup/umbMemberListView</projectUrl>
     <language />
     <releaseNotes>
       <![CDATA[
@@ -65,7 +65,7 @@ Installing the package enables a new Manage Dashboard on the Members section.
     
     <tags>Umbraco Membership Member Management</tags>
     <dependencies>
-      <dependency id="UmbracoCMS" version="[7.15.1, )"></dependency>
+      <dependency id="UmbracoCMS" version="[7.15.1, 8.0)"></dependency>
     </dependencies>
   </metadata>
   <files>
