--- a/Umbraco Package/package.xml
+++ b/Umbraco Package/package.xml
@@ -22,9 +22,19 @@
       <orgName>edit.html</orgName>
     </file>
     <file>
-      <guid>member.edit.controller.js</guid>
+      <guid>edit.controller.js</guid>
       <orgPath>/App_Plugins/MemberManager/backoffice/dialogs/member</orgPath>
-      <orgName>member.edit.controller.js</orgName>
+      <orgName>edit.controller.js</orgName>
+    </file>
+    <file>
+      <guid>export.html</guid>
+      <orgPath>/App_Plugins/MemberManager/backoffice/dialogs/member</orgPath>
+      <orgName>export.html</orgName>
+    </file>
+    <file>
+      <guid>export.controller.js</guid>
+      <orgPath>/App_Plugins/MemberManager/backoffice/dialogs/member</orgPath>
+      <orgName>export.controller.js</orgName>
     </file>
     <file>
       <guid>filter.html</guid>
@@ -32,9 +42,9 @@
       <orgName>filter.html</orgName>
     </file>
     <file>
-      <guid>member.filter.controller.js</guid>
+      <guid>filter.controller.js</guid>
       <orgPath>/App_Plugins/MemberManager/backoffice/dialogs/member</orgPath>
-      <orgName>member.filter.controller.js</orgName>
+      <orgName>filter.controller.js</orgName>
     </file>
     <file>
       <guid>memberListView.css</guid>
@@ -50,6 +60,26 @@
       <guid>MemberListView.dll</guid>
       <orgPath>/bin</orgPath>
       <orgName>MemberListView.dll</orgName>
+    </file>
+    <file>
+      <guid>ClosedXML.dll</guid>
+      <orgPath>/bin</orgPath>
+      <orgName>ClosedXML.dll</orgName>
+    </file>
+    <file>
+      <guid>DocumentFormat.OpenXml.dll</guid>
+      <orgPath>/bin</orgPath>
+      <orgName>DocumentFormat.OpenXml.dll</orgName>
+    </file>
+    <file>
+      <guid>ExcelNumberFormat.dll</guid>
+      <orgPath>/bin</orgPath>
+      <orgName>ExcelNumberFormat.dll</orgName>
+    </file>
+    <file>
+      <guid>FastMember.dll</guid>
+      <orgPath>/bin</orgPath>
+      <orgName>FastMember.dll</orgName>
     </file>
     <file>
       <guid>cs.xml</guid>
@@ -155,18 +185,18 @@
   <info>
     <package>
       <name>MemberListView for Umbraco 7</name>
-      <version>1.3.0</version>
+      <version>1.5.3</version>
       <license url="http://opensource.org/licenses/MIT">MIT License</license>
-      <url>https://github.com/KOBENDigital/umbMemberListView</url>
+      <url>https://github.com/YourItGroup/umbMemberListView</url>
       <requirements>
         <major>7</major>
-        <minor>7</minor>
-        <patch>0</patch>
+        <minor>15</minor>
+        <patch>1</patch>
       </requirements>
     </package>
     <author>
       <name>Robert Foster</name>
-      <website>http://refoster.com.au</website>
+      <website>http://youritteam.com.au</website>
     </author>
     <readme>
   <![CDATA[The MemberListView for Umbraco 7 provides a management dashboard view for Members with convenient filtering and sorting and allows for mass Unlock, Suspension or Activation of members.
@@ -180,6 +210,18 @@ The MemberListView has been designed to be similar to the ContentListView proper
 Member Editing
 ==============
 Member Editing can be done without leaving the MemberListView by clicking on a member name, which creates a Dialog pulled in from the right side to edit the member.
+
+New in Version 1.5.3
+====================
+* Added support for SensitiveData - Exports will be hidden if the user doesn't have permission to view sensitive data, and sensitive properties will not be viewable
+* Enhanced Export functionality - now allows selection of columns and the choice of exporting to CSV or Excel OpenFormat
+
+New in Version 1.5.0
+====================
+* Support for Umbraco 7.15
+* Refreshed listview to be more inline with current Umbraco styling and practices.
+* Filtering and columns now much easier to customise.
+* Added multiple Member Group filtering out of the box
 
 New in Version 1.3.0
 ====================
