--- a/Umbraco Package/9a85fb75-4ae9-4ee1-85aa-1adf6c19d02c/package.xml
+++ b/Umbraco Package/9a85fb75-4ae9-4ee1-85aa-1adf6c19d02c/package.xml
@@ -22,9 +22,19 @@
       <orgName>edit.html</orgName>
     </file>
     <file>
-      <guid>member.edit.controller.js</guid>
+      <guid>edit.controller.js</guid>
       <orgPath>/App_Plugins/MemberManager/backoffice/dialogs/member</orgPath>
-      <orgName>member.edit.controller.js</orgName>
+      <orgName>edit.controller.js</orgName>
+    </file>
+    <file>
+      <guid>export.html</guid>
+      <orgPath>/App_Plugins/MemberManager/backoffice/dialogs/member</orgPath>
+      <orgName>export.html</orgName>
+    </file>
+    <file>
+      <guid>export.controller.js</guid>
+      <orgPath>/App_Plugins/MemberManager/backoffice/dialogs/member</orgPath>
+      <orgName>export.controller.js</orgName>
     </file>
     <file>
       <guid>filter.html</guid>
@@ -32,9 +42,9 @@
       <orgName>filter.html</orgName>
     </file>
     <file>
-      <guid>member.filter.controller.js</guid>
+      <guid>filter.controller.js</guid>
       <orgPath>/App_Plugins/MemberManager/backoffice/dialogs/member</orgPath>
-      <orgName>member.filter.controller.js</orgName>
+      <orgName>filter.controller.js</orgName>
     </file>
     <file>
       <guid>memberListView.css</guid>
@@ -51,22 +61,142 @@
       <orgPath>/bin</orgPath>
       <orgName>MemberListView.dll</orgName>
     </file>
+    <file>
+      <guid>ClosedXML.dll</guid>
+      <orgPath>/bin</orgPath>
+      <orgName>ClosedXML.dll</orgName>
+    </file>
+    <file>
+      <guid>DocumentFormat.OpenXml.dll</guid>
+      <orgPath>/bin</orgPath>
+      <orgName>DocumentFormat.OpenXml.dll</orgName>
+    </file>
+    <file>
+      <guid>ExcelNumberFormat.dll</guid>
+      <orgPath>/bin</orgPath>
+      <orgName>ExcelNumberFormat.dll</orgName>
+    </file>
+    <file>
+      <guid>FastMember.dll</guid>
+      <orgPath>/bin</orgPath>
+      <orgName>FastMember.dll</orgName>
+    </file>
+    <file>
+      <guid>cs.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>cs.xml</orgName>
+    </file>
+    <file>
+      <guid>da.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>da.xml</orgName>
+    </file>
+    <file>
+      <guid>de.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>de.xml</orgName>
+    </file>
+    <file>
+      <guid>en-gb.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>en-gb.xml</orgName>
+    </file>
+    <file>
+      <guid>en-us.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>en-us.xml</orgName>
+    </file>
+    <file>
+      <guid>es.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>es.xml</orgName>
+    </file>
+    <file>
+      <guid>fr.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>fr.xml</orgName>
+    </file>
+    <file>
+      <guid>he.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>he.xml</orgName>
+    </file>
+    <file>
+      <guid>it.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>it.xml</orgName>
+    </file>
+    <file>
+      <guid>ja.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>ja.xml</orgName>
+    </file>
+    <file>
+      <guid>ko.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>ko.xml</orgName>
+    </file>
+    <file>
+      <guid>nb.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>nb.xml</orgName>
+    </file>
+    <file>
+      <guid>nl.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>nl.xml</orgName>
+    </file>
+    <file>
+      <guid>pl.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>pl.xml</orgName>
+    </file>
+    <file>
+      <guid>pt.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>pt.xml</orgName>
+    </file>
+    <file>
+      <guid>ru.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>ru.xml</orgName>
+    </file>
+    <file>
+      <guid>sv.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>sv.xml</orgName>
+    </file>
+    <file>
+      <guid>tr.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>tr.xml</orgName>
+    </file>
+    <file>
+      <guid>zh-tw.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>zh-tw.xml</orgName>
+    </file>
+    <file>
+      <guid>zh.xml</guid>
+      <orgPath>/App_Plugins/MemberManager/lang</orgPath>
+      <orgName>zh.xml</orgName>
+    </file>
   </files>
   <info>
     <package>
       <name>MemberListView for Umbraco 7</name>
-      <version>1.2.0</version>
+      <version>1.5.3</version>
       <license url="http://opensource.org/licenses/MIT">MIT License</license>
-      <url>https://github.com/KOBENDigital/umbMemberListView</url>
+      <url>https://github.com/YourItGroup/umbMemberListView</url>
       <requirements>
-        <major>3</major>
-        <minor>0</minor>
-        <patch>0</patch>
+        <major>7</major>
+        <minor>15</minor>
+        <patch>1</patch>
       </requirements>
     </package>
     <author>
       <name>Robert Foster</name>
-      <website>http://refoster.com.au</website>
+      <website>http://youritteam.com.au</website>
     </author>
     <readme>
   <![CDATA[The MemberListView for Umbraco 7 provides a management dashboard view for Members with convenient filtering and sorting and allows for mass Unlock, Suspension or Activation of members.
@@ -80,6 +210,23 @@ The MemberListView has been designed to be similar to the ContentListView proper
 Member Editing
 ==============
 Member Editing can be done without leaving the MemberListView by clicking on a member name, which creates a Dialog pulled in from the right side to edit the member.
+
+New in Version 1.5.3
+====================
+* Added support for SensitiveData - Exports will be hidden if the user doesn't have permission to view sensitive data, and sensitive properties will not be viewable
+* Enhanced Export functionality - now allows selection of columns and the choice of exporting to CSV or Excel OpenFormat
+
+New in Version 1.5.0
+====================
+* Support for Umbraco 7.15
+* Refreshed listview to be more inline with current Umbraco styling and practices.
+* Filtering and columns now much easier to customise.
+* Added multiple Member Group filtering out of the box
+
+New in Version 1.3.0
+====================
+* Support for Localization with plugin-based lang files
+* Fixed issue where selecting a row caused the "You have unsaved changes" message to appear on navigation.
 
 New in Version 1.2.0
 ====================
