better support for bulk operations allowing the index to catch up

--- a/MemberListView/MemberListView.nuspec
+++ b/MemberListView/MemberListView.nuspec
@@ -19,6 +19,10 @@
       <![CDATA[
 Installing the package enables a new Manage Dashboard on the Members section.
 
+**Version 1.5.4**
+
+* Improved handling of bulk operations - refresh should now display correct items after a short delay to allow the index to catch up.
+
 **Version 1.5.3**
 
 * Added support for SensitiveData - Exports will be hidden if the user doesn't have permission to view sensitive data, and sensitive properties will not be viewable
