implemented index searching for complex filtering and fixed csv export

--- a/MemberListView/packages.config
+++ b/MemberListView/packages.config
@@ -20,6 +20,7 @@
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Log4Net.Async" version="2.0.4" targetFramework="net47" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net472" />
+  <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net472" />
   <package id="Markdown" version="2.2.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net47" />
