🐛 fixing suspend/locked member filtering bug

--- a/WebSampleV8/WebSampleV8.csproj
+++ b/WebSampleV8/WebSampleV8.csproj
@@ -385,6 +385,8 @@
           <DevelopmentServerPort>2693</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>https://localhost:44360/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>https://localhost:44360/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
